# dataQuest

./: .gitignore  CMakeLists.txt  README  main.cpp
doxygen/iRPC/: Doxyfile  README.md
include/: DqAnalysis.hpp  DqCard.hpp  DqConfigure.hpp
include/Features/: DqParser.hpp  DqProcessBar.hpp
include/InOutData/: DqCSV.hpp  DqRoot.hpp
include/LyPeti/: LyPeti.hpp  LyPetiAnalysis.hpp  LyPetiEvent.hpp  LyPetiRaw.hpp  LyPetiRead.hpp  LyPetiTree.hpp  iRPCCluster.hpp  iRPCClusterContainer.hpp  iRPCClusterizer.hpp  iRPCHit.hpp  iRPCHitContainer.hpp  iRPCInfo.hpp  zmBuffer.hpp
include/MyROOT/: DqMTGE.hpp  DqTG2D.hpp  DqTGAE.hpp  DqTGE.hpp  DqTH1D.hpp  DqTH2D.hpp  MyRoot.hpp
include/RoPetiEvent/: RoPetiEvent.h  RoPetiEventLinkDef.h
include/Wee2UI/: Wee2UI.hpp
include/iRPC/: iRPCCluster.hpp  iRPCClusterContainer.hpp  iRPCClusterizer.hpp  iRPCHit.hpp  iRPCHitContainer.hpp  iRPCInfo.hpp
libs_bc/: G__RoPetiEvent_rdict.pcm
modules/: FindPackageHandleStandardArgs.cmake  FindROOT.cmake  FindZLIB.cmake  README  RootMacros.cmake  RootNewMacros.cmake  SelectLibraryConfigurations.cmake
scripts/: DEADscan.sh  SigmoideFitter.C  create_myDir.sh  fitData.txt  update_cards.sh
scripts/public/GIF_sdhcal11_0818/: update_cards.sh
scripts/public/project/: update_cards.sh
src/: DqAnalysis.cpp  DqCard.cpp  DqConfigure.cpp
src/Features/: DqParser.cpp  DqProcessBar.cpp
src/InOutData/: DqCSV.cpp  DqRoot.cpp
src/LyPeti/: LyPeti.cpp  LyPetiAnalysis.cpp  LyPetiEvent.cpp  LyPetiRaw.cpp  LyPetiRead.cpp  LyPetiTree.cpp  iRPCCluster.cpp  iRPCClusterizer.cpp  iRPCHit.cpp  iRPCInfo.cpp
src/MyROOT/: DqMTGE.cpp  DqTG2D.cpp  DqTGAE.cpp  DqTGE.cpp  DqTH1D.cpp  DqTH2D.cpp  MyRoot.cpp
src/RoPetiEvent/: RoPetiEvent.cxx
src/Wee2UI/: Wee2UI.cpp
src/iRPC/: iRPCCluster.cpp  iRPCClusterizer.cpp  iRPCHit.cpp  iRPCInfo.cpp
